<resources>
    <string name="app_name">AndroidTutorialOne</string>
    <string name="title_activity_other_ui_elements">otherUiElements</string>
    <string name="message_one">message_one</string>
    <string name="Invoke_from_Java">Invoke_from_Java</string>
    <string name="InvokefromXml">Invoke_from_Xml</string>
    <string name="clickme">click Me</string>
    <string name="your_message">your_message</string>
    <string name="message_two">message_two</string>
    <string name="NextPage">NextPage</string>
    <string name="boy_image">boy_image</string>
    <string name="girl_image">girl_image</string>
    <string name="GoogleCodeLabs">GoogleCodeLabs</string>
    <string name="zero">0</string>
    <string name="toast">toast</string>
    <string name="countup">countup</string>
    <string name="toast_message">toast_message</string>
    <string name="title_activity_google_codelab_2">google_codelab_2</string>
    <string name="googleCodeLabTwo">codelab_2</string>
    <string name="articleTitle">Eco times</string>
    <string name="article_subtitle">Phulwara attack </string>
    <string name="article"> Dont fall in love A 20-year-old boy tells Kashmiri youth in his last message recorded before he drove an explosive-laden Scorpio and rammed it into a CRPF convoy yesterday killing 37 men and injuring dozens. By the time this video reaches you, I will be enjoying in and stayed put in adverse circumstances.. Come, join the group and prepare for one last fight he says in video One of the three sons of a small vendor Dar dropped out of Class XII in 2017 and started working at a sawmill owned by a neighbour according to a report His house was barely 10 kilometres from the site of the attack a year after joining the sawmill, Dar went missing along with two friends Tauseef and Waseem elder brother Manzoor Ahmad Dar was a terrorist who was killed in 2016 family filed a missing person report at the local police station A few days the sawmill, Dar went missing along with two friends Tauseef and Waseem elder brother Manzoor Ahmad Da
        r was a terrorist who was killed in 2016 family filed a missing person report at the local police station A few days  </string>
</resources>
