<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".google_codelab_two">

    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/paddingRegular"
        android:text="@string/articleTitle"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/article_subheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/article_heading"
        android:background="@color/colorPrimary"
        android:padding="@dimen/paddingRegular"
        android:text="@string/article_subtitle"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/article_subheading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/article_subheading_internal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5sp"
                android:padding="@dimen/paddingRegular"
                android:text="@string/article_subtitle"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5sp"
                android:padding="@dimen/paddingRegular"
                android:text="@string/article"
                android:textSize="18sp" />

        </LinearLayout>


        ></ScrollView>


</RelativeLayout>